# telegram-bot

./: .gitignore  Dockerfile  bot.py  pyproject.toml  render.yaml  requirements.txt
