[tool.poetry]
name = "anonbot"
version = "0.1.0"
description = "Telegram Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "3.11.8"  # Жёсткая фиксация версии
aiogram = "3.0.0b7"
aiohttp = "3.8.6"
python-dotenv = "1.0.0"
flask = "3.0.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"